==> zephyrproject-rtos/zephyr/drivers/dma/dma_mspm0.c <==
#define DT_DRV_COMPAT ti_mspm0_dma
#include <errno.h>
#include <stdio.h>
#include <string.h>
#include <zephyr/kernel.h>
#include <zephyr/device.h>
#include <zephyr/init.h>
#include <zephyr/drivers/dma.h>
#include <soc.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#define DMA_MAX_CHANNEL	DT_INST_PROP(0, dma_channels)

static int dma_mspm0_configure(const struct device *dev, uint32_t channel,
			       struct dma_config *config)
{
	uint32_t temp;
	const struct dma_mspm0_config *cfg = dev->config;
	struct dma_mspm0_data *dma_data = dev->data;
	struct dma_mspm0_channel_data *data = NULL;
	struct dma_block_config *b_cfg = config->head_block;
	DL_DMA_Config dma_cfg = {0};

	if ((config == NULL) || (channel > DMA_MAX_CHANNEL)) {
		return -EINVAL;
	}

	data = &dma_data->ch_data[channel];
	if (data->busy != false) {
		return -EBUSY;
	}

	if (config->dest_data_size != config->source_data_size) {
		return -EINVAL;
	}

	if (mspm0_get_memory_increment(b_cfg->source_addr_adj, &temp)){
		return -EINVAL;
	}

	dma_cfg.srcIncrement = temp;
	if (mspm0_get_memory_increment(b_cfg->dest_addr_adj, &temp)){
		return -EINVAL;
	}

	dma_cfg.destIncrement = temp;
	if (mspm0_get_datawidth(config->dest_data_size, &temp)) {
		return -EINVAL;
	}

	dma_cfg.destWidth      = temp;
	if (mspm0_get_datawidth(config->source_data_size, &temp)) {
		return -EINVAL;
	}

	dma_cfg.srcWidth	= temp ;
	data->direction		= config->channel_direction;
	data->dma_callback	= config->dma_callback;
	data->user_data		= config->user_data;
	dma_cfg.transferMode	= DL_DMA_SINGLE_TRANSFER_MODE,
	dma_cfg.extendedMode	= DL_DMA_NORMAL_MODE,
	dma_cfg.triggerType	= DL_DMA_TRIGGER_TYPE_EXTERNAL;
	dma_cfg.trigger		= config->dma_slot;

	DL_DMA_clearInterruptStatus(DMA, channel + 1);
	DL_DMA_enableInterrupt(DMA, channel + 1);
	DL_DMA_setTransferSize(cfg->base, channel, b_cfg->block_size);
	DL_DMA_initChannel(cfg->base, channel, &dma_cfg);
	DL_DMA_setSrcAddr(cfg->base, channel, b_cfg->source_address);
	DL_DMA_setDestAddr(cfg->base, channel, b_cfg->dest_address);
	data->busy = true;

	return 0;
}

static int dma_mspm0_start(const struct device *dev, const uint32_t channel)
{
	const struct dma_mspm0_config *cfg = dev->config;

	if (channel > DMA_MAX_CHANNEL) {
		return -EINVAL;
	}

	DL_DMA_enableChannel(cfg->base, channel);

	return 0;
}

static int dma_mspm0_stop(const struct device *dev, const uint32_t channel)
{
	const struct dma_mspm0_config *cfg = dev->config;
	struct dma_mspm0_data *data = dev->data;

	if (channel > DMA_MAX_CHANNEL) {
		return -EINVAL;
	}

	DL_DMA_disableChannel(cfg->base, channel);
	data->ch_data[channel].busy = false;

	return 0;
}

static int dma_mspm0_reload(const struct device *dev, uint32_t channel, uint32_t src_addr,
			    uint32_t dest_addr, size_t size)
{
	const struct dma_mspm0_config *cfg = dev->config;
	struct dma_mspm0_channel_data *data = NULL;
	struct dma_mspm0_data *dma_data = dev->data;

	if (channel > DMA_MAX_CHANNEL) {
		return -EINVAL;
	}

	data = &dma_data->ch_data[channel];
	switch (data->direction) {
	case PERIPHERAL_TO_MEMORY:
		DL_DMA_setDestAddr(cfg->base, channel, dest_addr);
		break;
	case MEMORY_TO_PERIPHERAL:
		DL_DMA_setSrcAddr(cfg->base, channel, src_addr);
		break;
	default:
		return -ENOTSUP;
	}

	DL_DMA_setTransferSize(cfg->base, channel, size);
	data->busy = true;

	return 0;
}

static int dma_mspm0_get_status(const struct device *dev, uint32_t channel,
				struct dma_status *stat)
{
	const struct dma_mspm0_config *cfg = dev->config;
	struct dma_mspm0_data *dma_data = dev->data;
	struct dma_mspm0_channel_data *data;

	if (channel > DMA_MAX_CHANNEL) {
		return -EINVAL;
	}

	data = &dma_data->ch_data[channel];
	stat->pending_length = DL_DMA_getTransferSize(cfg->base, channel);
	stat->dir = data->direction;
	stat->busy = data->busy;

	return 0;
}

static int mspm0_dma_init(const struct device *dev)
{
	dma_mspm0_irq_config(dev);

	return 0;
}
